--- a/src/decap-slug/style-disabled-input.css
+++ b/src/decap-slug/style-disabled-input.css
@@ -1,4 +1,3 @@
-input[id^="slug-field"][readonly] {
-  opacity: 66%;
-  pointer-events: none;
+input[id^="slug-field"]:disabled {
+  cursor: not-allowed;
 }
